-  Fixed missing library path. -  Updated Docker image version.

--- a/recipes/KiCad.yml
+++ b/recipes/KiCad.yml
@@ -33,6 +33,10 @@ script:
   - HERE="$(dirname "$(readlink -f "${0}")")"
   - export LD_LIBRARY_PATH="${HERE}"/usr/lib/x86_64-linux-gnu/:"${HERE}"/lib/x86_64-linux-gnu/:"${HERE}"/usr/lib/:"${HERE}"/lib/:$LD_LIBRARY_PATH
   - cd "${HERE}/usr"
+  - export KICAD8_3DMODEL_DIR="${HERE}/usr/share/kicad/3dmodels"
+  - export KICAD8_FOOTPRINT_DIR="${HERE}/usr/share/kicad/footprints"
+  - export KICAD8_SYMBOL_DIR="${HERE}/usr/share/kicad/symbols"
+  - export KICAD8_TEMPLATE_DIR="${HERE}/usr/share/kicad/template"
   - exec "./bin/kicad" "$@"
   - EOF
   - chmod a+x ./AppRun
