--- a/recipes/KiCad.yml
+++ b/recipes/KiCad.yml
@@ -23,8 +23,7 @@ script:
   # Remove any previous build
   - rm -rf KiCad
   - cp /lib/x86_64-linux-gnu/libpango-1.0.so.0 ./lib/x86_64-linux-gnu/libpango-1.0.so.0
-  - cp /usr/lib/x86_64-linux-gnu/libpangoft2-1.0.so.0 ./usr/lib/x86_64-linux-gnu/libpangoft2-1.0.so.0
-  - cp /usr/lib/x86_64-linux-gnu/libgtk-3.so.0 ./usr/lib/x86_64-linux-gnu/libgtk-3.so.0
+  - cp /usr/lib/x86_64-linux-gnu/lib*.so.* ./usr/lib/x86_64-linux-gnu/
   - cp -r /usr/lib/python3/ ./usr/lib
   - # Workaround until
   - # AppRun.c exports rather than just sets environment variables
