- Fix error in Fedora `error while loading shared libraries: libGLU.so.1: cannot open shared object file: No such file or directory`

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     image: kicad-appimage:8.0.0
     build: .
     volumes:
-      - .:/kicad-appimage
-    working_dir: /kicad-appimage
+      - .:/appimage
+    working_dir: /appimage
     privileged: true
