- Remove unnecessary bundled libraries that are incompatible with various Linux operating systems. - Include detailed instructions for installing the display driver. - Allow access to internal binaries within KiCad.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: "3.9"
 services:
-  kicad:
+  dev:
     platform: linux/amd64
-    image: kicad-appimage:8.0.0
-    build: .
+    build: ./
     volumes:
       - .:/appimage
     working_dir: /appimage
